--- a/index.html
+++ b/index.html
@@ -20,6 +20,202 @@
 var seq = "340";
 var opn = "y" //--- "y": 전체공개, "n": 일부공개
 musbox( null,5);
+  
+var skds = [
+["340","2020-10-21","주흘산 부봉","경북 문경","새재주차장- 1관문(주흘관)- 여궁폭포- 대궐샘- 주봉- 영봉- 960봉- 부봉(1봉~6봉)- 2관문(조곡관) - 1관문- 주차장.....","약8시간 산행","http://cfile236.uf.daum.net/original/1906A8434FD6C8461F9381","","○","","산술애","167","y","10"]
+  ];
+
+var trimgs = [
+["340","P001","","http://cfile260.uf.daum.net/image/992596385F914DD62CF8A3","출발에 앞서 옛길박물관 앞에서 인증 샷.....",""],
+["340","P002","","http://cfile265.uf.daum.net/image/99DA63385F914DD62D95DB","",""],
+["340","P003","n","http://cfile269.uf.daum.net/image/9953B7385F914DD62BA89C","문경새재 과거길에서.....",""],
+["340","P004","n","http://cfile297.uf.daum.net/image/99929E385F914DD72A54B9","",""],
+["340","P005","","http://cfile292.uf.daum.net/image/992902385F914DD72CB0BB","",""],
+["340","P006","","http://cfile282.uf.daum.net/image/99A78C385F914DD721E863","1관문(주흘관)을 통과하여 우측으로 여궁폭포 쪽으로 올라간다.....",""],
+["340","P007","","http://cfile265.uf.daum.net/image/9993EF385F914DD7297415","",""],
+["340","P008","","http://cfile269.uf.daum.net/image/99F3C0385F914DD8298480","",""],
+["340","P009","","http://cfile277.uf.daum.net/image/9992B6385F914DD8299480","",""],
+["340","P010","","http://cfile293.uf.daum.net/image/997BB2415F914DD8250C3D","여궁폭포 쪽으로.....",""],
+["340","P011","","http://cfile276.uf.daum.net/image/995900415F914DD9291E95","",""],
+["340","P012","","http://cfile272.uf.daum.net/image/99F823415F914DD9271885","",""],
+["340","P013","","http://cfile283.uf.daum.net/image/99775F415F914DD9247A82","",""],
+["340","P014","","http://cfile290.uf.daum.net/image/997C9B415F914DD928F9BD","여궁폭포 도착.....",""],
+["340","P015","n","http://cfile295.uf.daum.net/image/995A43415F914DDA299ED6","",""],
+["340","P016","n","http://cfile290.uf.daum.net/image/99B3CC3E5F914DDA273BB5","",""],
+["340","P017","n","http://cfile265.uf.daum.net/image/99B8973E5F914DDA204799","",""],
+["340","P018","n","http://cfile248.uf.daum.net/image/996C6D3E5F914DDB2126EA","",""],
+["340","P019","n","http://cfile284.uf.daum.net/image/9966713E5F914DDB1DA3D6","",""],
+["340","P020","","http://cfile288.uf.daum.net/image/99FB0E3E5F914DDB25A596","여궁폭포.... 물이 적다.....","내20"],
+["340","P021","n","http://cfile254.uf.daum.net/image/9940AE3E5F914DDB292F02","",""],
+["340","P022","","http://cfile264.uf.daum.net/image/9903803E5F914DDC1FF626","",""],
+["340","P023","","http://cfile291.uf.daum.net/image/99B86C3E5F914DDC27A31A","우측 주흘산 정상으로.....",""],
+["340","P024","","http://cfile293.uf.daum.net/image/9902C33E5F914DDC26819D","아래쪽 계곡의 단풍이 아름답다.....",""],
+["340","P025","","http://cfile266.uf.daum.net/image/9931293E5F914DDD22FD7F","",""],
+["340","P026","","http://cfile254.uf.daum.net/image/9948AD3E5F914DDD1EEA84","",""],
+["340","P027","","http://cfile300.uf.daum.net/image/99C1EF3E5F914DDD202B72","",""],
+["340","P028","","http://cfile250.uf.daum.net/image/99BAF93E5F914DDE24E0A9","물이 많을 때는 여기도 폭포이고.....",""],
+["340","P029","","http://cfile261.uf.daum.net/image/9997753E5F914DDE28479C","여기도 폭포인데.... 지금은 물이 없다.....",""],
+["340","P030","","http://cfile259.uf.daum.net/image/9904063E5F914DDE26DD94","",""],
+["340","P031","","http://cfile269.uf.daum.net/image/994A073E5F914DDE297EED","",""],
+["340","P032","","http://cfile276.uf.daum.net/image/99529A3E5F914DDF25D741","혜국사 갈림길.... 여기서 우측으로 올라간다.....",""],
+["340","P033","n","http://cfile295.uf.daum.net/image/9972943E5F914DDF19FEBD","",""],
+["340","P034","n","http://cfile264.uf.daum.net/image/994A093E5F914DDF29CA3D","",""],
+["340","P035","","http://cfile256.uf.daum.net/image/997C2F3E5F914DE02144D7","",""],
+["340","P036","","http://cfile245.uf.daum.net/image/99B7123E5F914DE024D175","",""],
+["340","P037","","http://cfile297.uf.daum.net/image/99F1DD3D5F914DE026ACC8","",""],
+["340","P038","","http://cfile265.uf.daum.net/image/99AB2C3D5F914DE11FD82E","",""],
+["340","P039","","http://cfile246.uf.daum.net/image/99FCF23D5F914DE126141D","",""],
+["340","P040","","http://cfile286.uf.daum.net/image/99FD623D5F914DE1262C2B","",""],
+["340","P041","","http://cfile258.uf.daum.net/image/99C4F23D5F914DE12A2720","",""],
+["340","P042","","http://cfile282.uf.daum.net/image/994A123D5F914DE225EE82","",""],
+["340","P043","n","http://cfile269.uf.daum.net/image/9988103D5F914DE2273C85","",""],
+["340","P044","","http://cfile291.uf.daum.net/image/9937F03F5F914DE225DFAF","","내20"],
+["340","P045","","http://cfile283.uf.daum.net/image/99CE0E3F5F914DE326F6D1","대궐샘.....",""],
+["340","P046","","http://cfile296.uf.daum.net/image/990C7D3F5F914DE322ECED","",""],
+["340","P047","","http://cfile252.uf.daum.net/image/992A723F5F914DE3251FBE","",""],
+["340","P048","","http://cfile257.uf.daum.net/image/9992743F5F914DE4240E5D","",""],
+["340","P049","","http://cfile255.uf.daum.net/image/99D0B03F5F914DE423A386","",""],
+["340","P050","","http://cfile246.uf.daum.net/image/99A6863F5F914DE42675A0","",""],
+["340","P051","","http://cfile282.uf.daum.net/image/99BF5A415F914E492894B3","주봉 삼거리.... 주봉에서 되돌아와 영봉쪽으로 가야한다.....",""],
+["340","P052","","http://cfile271.uf.daum.net/image/9981E1415F914E4925D9D5","주흘산 정상 (주봉 1076m).... 누군가가 1676m로 장난을 했다.....",""],
+["340","P053","n","http://cfile283.uf.daum.net/image/9947D1415F914E4926B6DC","",""],
+["340","P054","n","http://cfile290.uf.daum.net/image/990AD4415F914E49227544","",""],
+["340","P055","n","http://cfile298.uf.daum.net/image/99AD84415F914E4A28F01C","",""],
+["340","P056","n","http://cfile269.uf.daum.net/image/995784415F914E4A1D17EC","",""],
+["340","P057","n","http://cfile269.uf.daum.net/image/99BF41415F914E4A280267","",""],
+["340","P058","n","http://cfile249.uf.daum.net/image/9953C0415F914E4B29EF3E","",""],
+["340","P059","n","http://cfile253.uf.daum.net/image/996956415F914E4B298421","",""],
+["340","P060","n","http://cfile260.uf.daum.net/image/9992FE3B5F914E4B2B4F11","",""],
+["340","P061","n","http://cfile283.uf.daum.net/image/9994E63B5F914E4B2BE8B4","",""],
+["340","P062","n","http://cfile288.uf.daum.net/image/9988983B5F914E4C277FBC","",""],
+["340","P063","n","http://cfile264.uf.daum.net/image/99E2333B5F914E4C2A1194","",""],
+["340","P064","n","http://cfile244.uf.daum.net/image/99F0DF3B5F914E4C268E3E","",""],
+["340","P065","","http://cfile296.uf.daum.net/image/99368A3B5F914E4C20C156","","내20"],
+["340","P066","n","http://cfile258.uf.daum.net/image/99E2E33B5F914E4D2AD86B","",""],
+["340","P067","","http://cfile271.uf.daum.net/image/993703385F914E4D24FFD3","",""],
+["340","P068","n","http://cfile290.uf.daum.net/image/992969385F914E4D282B71","",""],
+["340","P069","n","http://cfile275.uf.daum.net/image/99D449385F914E4D25EDC1","",""],
+["340","P070","","http://cfile297.uf.daum.net/image/99F840385F914E4E2D728C","다시 내려와 영봉으로 향한다.....",""],
+["340","P071","","http://cfile261.uf.daum.net/image/9996F4385F914E4E2A2F39","우측 아래로 보이는 능선에 단풍이 곱다.....",""],
+["340","P072","","http://cfile277.uf.daum.net/image/99700B385F914E4E27BF11","",""],
+["340","P073","","http://cfile300.uf.daum.net/image/99ADB8385F914E4F2AAE16","",""],
+["340","P074","n","http://cfile291.uf.daum.net/image/996286405F914E4F294828","",""],
+["340","P075","","http://cfile288.uf.daum.net/image/999D7D405F914E4F28720D","",""],
+["340","P076","","http://cfile280.uf.daum.net/image/995D59405F914E4F25AAEE","",""],
+["340","P077","","http://cfile269.uf.daum.net/image/99595E405F914E5025E391","",""],
+["340","P078","","http://cfile256.uf.daum.net/image/99935F405F914E50240089","영봉삼거리.... 좌측은 계곡하산길이고.... 우리는 영봉을 거쳐 부봉쪽으로.....",""],
+["340","P079","","http://cfile261.uf.daum.net/image/993D42405F914E50214A0E","영봉 도착.....",""],
+["340","P080","","http://cfile269.uf.daum.net/image/99FB48385F914E5129043D","주흘영봉 (주흘산 최고봉 1106m).....",""],
+["340","P081","n","http://cfile290.uf.daum.net/image/99FA2C385F914E512D4FC5","",""],
+["340","P082","n","http://cfile289.uf.daum.net/image/990469385F914E5127EC17","",""],
+["340","P083","n","http://cfile243.uf.daum.net/image/9966BC385F914E5127CBF5","",""],
+["340","P084","n","http://cfile260.uf.daum.net/image/99FE4A385F914E522D2459","",""],
+["340","P085","n","http://cfile270.uf.daum.net/image/993236385F914E522CF8EC","",""],
+["340","P086","n","http://cfile256.uf.daum.net/image/9939AB385F914E522C39DA","",""],
+["340","P087","n","http://cfile292.uf.daum.net/image/99684D3D5F914E53283205","",""],
+["340","P088","","http://cfile272.uf.daum.net/image/99145D3D5F914E5326B3BE","","내20"],
+["340","P089","","http://cfile290.uf.daum.net/image/9914AF3D5F914E53260573","",""],
+["340","P090","","http://cfile266.uf.daum.net/image/9951053D5F914E5325EEAF","영봉 표지석 뒤쪽엔 한글로 씌여 있다.....",""],
+["340","P091","","http://cfile294.uf.daum.net/image/9911733D5F914E54229260","영봉에서 부봉까지는 2.3km.....",""],
+["340","P092","","http://cfile246.uf.daum.net/image/99309E3D5F914E5429803E","영봉표지석을 지나서 직진해야 한다.....",""],
+["340","P093","","http://cfile278.uf.daum.net/image/9968D73D5F914E542C553B","",""],
+["340","P094","","http://cfile249.uf.daum.net/image/99D7B93D5F914E552AEB0F","평천리 하산지점 삼거리표지.....",""],
+["340","P095","","http://cfile291.uf.daum.net/image/99E1B43B5F914E552A6906","속이 빈 고목이 잘려나갔다.... 마치 예리한 칼로 단칼에 벤 듯이.....",""],
+["340","P096","","http://cfile285.uf.daum.net/image/996F8A3B5F914E552C490F","모처럼 조망이 있다.... 멀리 월악산 만수암릉과 영봉 중봉 하봉이 보인다.....",""],
+["340","P097","","http://cfile274.uf.daum.net/image/99E9583B5F914E552A1A8D","",""],
+["340","P098","","http://cfile300.uf.daum.net/image/994B9E3B5F914E5628B17B","",""],
+["340","P099","","http://cfile275.uf.daum.net/image/99EA123B5F914E562AECAC","하늘재갈림길.... 여기서부터 백두대간이다.....",""],
+["340","P100","","http://cfile248.uf.daum.net/image/99960A3B5F914E562BDB1D","",""],
+["340","P101","","http://cfile258.uf.daum.net/image/99AC16355F914EC128E611","",""],
+["340","P102","","http://cfile298.uf.daum.net/image/9918F1355F914EC11EC9F9","",""],
+["340","P103","","http://cfile247.uf.daum.net/image/99611A355F914EC226A4B7","",""],
+["340","P104","","http://cfile260.uf.daum.net/image/991C43355F914EC21E0E39","",""],
+["340","P105","n","http://cfile285.uf.daum.net/image/99176C355F914EC223C1D9","",""],
+["340","P106","","http://cfile297.uf.daum.net/image/99F044355F914EC3273E66","","내20"],
+["340","P107","","http://cfile263.uf.daum.net/image/99FE8A355F914EC327AC58","","내20"],
+["340","P108","","http://cfile281.uf.daum.net/image/990275355F914EC327039F","",""],
+["340","P109","","http://cfile279.uf.daum.net/image/99B2F43B5F914EC32390CC","",""],
+["340","P110","","http://cfile288.uf.daum.net/image/99AC873B5F914EC427F621","부봉갈림길.... 여기서 좌측 부봉으로 간다.....",""],
+["340","P111","","http://cfile266.uf.daum.net/image/99FC293B5F914EC42A4E63","",""],
+["340","P112","","http://cfile275.uf.daum.net/image/99BC2F3B5F914EC42B500B","",""],
+["340","P113","","http://cfile242.uf.daum.net/image/9915DB3B5F914EC526015A","",""],
+["340","P114","","http://cfile249.uf.daum.net/image/99AE583B5F914EC52771B5","부봉 (1봉 917m).... 여기까지가 백두대간이다.....",""],
+["340","P115","n","http://cfile283.uf.daum.net/image/99B1EA3B5F914EC5233D18","",""],
+["340","P116","n","http://cfile264.uf.daum.net/image/99E9F0415F914EC5238E76","",""],
+["340","P117","","http://cfile286.uf.daum.net/image/99D1E5415F914EC6283DA6","","내20"],
+["340","P118","n","http://cfile287.uf.daum.net/image/9944F4415F914EC62A87CB","",""],
+["340","P119","n","http://cfile300.uf.daum.net/image/999682415F914EC62410F3","",""],
+["340","P120","n","http://cfile294.uf.daum.net/image/993029415F914EC72290F9","",""],
+["340","P121","","http://cfile250.uf.daum.net/image/992DE4415F914EC729D7CF","","내20"],
+["340","P122","","http://cfile247.uf.daum.net/image/997897415F914EC7281580","오늘 지나온 능선을 뒤돌아 보고.....",""],
+["340","P123","","http://cfile271.uf.daum.net/image/99AAA53D5F914EC7249C1D","",""],
+["340","P124","","http://cfile278.uf.daum.net/image/99E6B73D5F914EC82A7306","",""],
+["340","P125","n","http://cfile283.uf.daum.net/image/9969A63D5F914EC8215695","",""],
+["340","P126","","http://cfile275.uf.daum.net/image/997F3E3D5F914EC8285D83","",""],
+["340","P127","","http://cfile265.uf.daum.net/image/99ED163D5F914EC923B183","",""],
+["340","P128","","http://cfile294.uf.daum.net/image/9951AB3D5F914EC92997D6","부봉 (2봉 939.5m).....",""],
+["340","P129","n","http://cfile242.uf.daum.net/image/9922403D5F914EC926D2BC","",""],
+["340","P130","","http://cfile291.uf.daum.net/image/9983B63B5F914EC92C59DA","","내20"],
+["340","P131","","http://cfile293.uf.daum.net/image/9952C03B5F914ECA2808B0","",""],
+["340","P132","","http://cfile247.uf.daum.net/image/99E71A3B5F914ECA22A8CC","",""],
+["340","P133","","http://cfile284.uf.daum.net/image/99BAB43B5F914ECA22F2ED"," 오른쪽에 미륵바위.... 암릉을 바라보는 듯 하다.....","바위 나무"],
+["340","P134","","http://cfile300.uf.daum.net/image/99E5853B5F914ECA229432","",""],
+["340","P135","","http://cfile274.uf.daum.net/image/99206C3B5F914ECB263ECA","",""],
+["340","P136","","http://cfile262.uf.daum.net/image/99364A3B5F914ECB298300","",""],
+["340","P137","","http://cfile262.uf.daum.net/image/99A481395F914ECB267543","",""],
+["340","P138","","http://cfile244.uf.daum.net/image/999FB8395F914ECC2699B0","부봉 (3봉).....",""],
+["340","P139","n","http://cfile278.uf.daum.net/image/9934D8395F914ECC28AC2E","",""],
+["340","P140","","http://cfile273.uf.daum.net/image/99ADDC395F914ECC264B1F","","내20"],
+["340","P141","n","http://cfile244.uf.daum.net/image/9984C8395F914ECC1F7D74","",""],
+["340","P142","n","http://cfile276.uf.daum.net/image/99AED0395F914ECD26735C","",""],
+["340","P143","n","http://cfile249.uf.daum.net/image/997BA3395F914ECD27806B","",""],
+["340","P144","","http://cfile264.uf.daum.net/image/99936E395F914ECD2397A2","","내20"],
+["340","P145","","http://cfile290.uf.daum.net/image/9986003F5F914ECD28C7C9","",""],
+["340","P146","","http://cfile249.uf.daum.net/image/990BDF3F5F914ECE265010","3봉에서 바라본 4봉.....",""],
+["340","P147","","http://cfile269.uf.daum.net/image/99CA9F3F5F914ECE2764FA","",""],
+["340","P148","","http://cfile297.uf.daum.net/image/99559E3F5F914ECE29594E","",""],
+["340","P149","n","http://cfile275.uf.daum.net/image/9990EF3F5F914ECF2844E2","5봉.....",""],
+["340","P150","","http://cfile261.uf.daum.net/image/9915753F5F914ECF266B3F","사자바위.....","바위 나무"],
+["340","P151","n","http://cfile273.uf.daum.net/image/994078335F914F322179B7","",""],
+["340","P152","","http://cfile249.uf.daum.net/image/99FBC4335F914F3222A9FE","","내20"],
+["340","P153","","http://cfile269.uf.daum.net/image/998247335F914F33203051","",""],
+["340","P154","","http://cfile274.uf.daum.net/image/998003335F914F3328F705","6봉 삼거리.... 6봉을 갔다가 와서 2관문으로 하산한다.....",""],
+["340","P155","","http://cfile247.uf.daum.net/image/99499C335F914F33259577","",""],
+["340","P156","","http://cfile263.uf.daum.net/image/991EFF335F914F34268A35","",""],
+["340","P157","","http://cfile269.uf.daum.net/image/99CE3B335F914F3427C659","",""],
+["340","P158","","http://cfile257.uf.daum.net/image/9925AD335F914F342A9510","6봉 오르는 길에 뒤돌아 본 5봉쪽 모습.....",""],
+["340","P159","n","http://cfile241.uf.daum.net/image/9933D3375F914F352E6290","",""],
+["340","P160","","http://cfile285.uf.daum.net/image/998303375F914F3528BBD9","",""],
+["340","P161","","http://cfile244.uf.daum.net/image/996934375F914F35317847","부봉 (6봉 916.2m).....",""],
+["340","P162","n","http://cfile286.uf.daum.net/image/99B21E375F914F3530DFEE","",""],
+["340","P163","","http://cfile247.uf.daum.net/image/9906AE375F914F352FEB6D","","내20"],
+["340","P164","","http://cfile262.uf.daum.net/image/994ED9375F914F3629B025","",""],
+["340","P165","","http://cfile243.uf.daum.net/image/99FF82375F914F362F2602","",""],
+["340","P166","","http://cfile278.uf.daum.net/image/99E269375F914F3627A9EC","부봉 6봉에 있는 소나무 남근목.....","바위 나무"],
+["340","P167","","http://cfile299.uf.daum.net/image/994F16335F914F36254FD7","","바위 나무"],
+["340","P168","","http://cfile268.uf.daum.net/image/991AC0335F914F37260151","",""],
+["340","P169","","http://cfile264.uf.daum.net/image/991610335F914F3722F4B7","",""],
+["340","P170","","http://cfile299.uf.daum.net/image/99B6CA335F914F3723BDD5","묘.....",""],
+["340","P171","","http://cfile290.uf.daum.net/image/99D658335F914F3827FC4B","",""],
+["340","P172","","http://cfile300.uf.daum.net/image/994F68335F914F3825EA99","",""],
+["340","P173","n","http://cfile260.uf.daum.net/image/99EFB7365F914F38268DEC","",""],
+["340","P174","","http://cfile249.uf.daum.net/image/991214365F914F392164BA","","내20"],
+["340","P175","","http://cfile278.uf.daum.net/image/994172365F914F39252684","2관문 (조곡관) 성벽이다.....",""],
+["340","P176","","http://cfile242.uf.daum.net/image/99F0AB365F914F39256025","",""],
+["340","P177","n","http://cfile245.uf.daum.net/image/997386365F914F3918DECA","2관문 (조곡관)에서 부봉 안전산행을 감사하며 인증.....",""],
+["340","P178","n","http://cfile260.uf.daum.net/image/99864B365F914F3A241407","영봉팀 두사람을 만났다.... 반가움에 또 한컷.....",""],
+["340","P179","","http://cfile252.uf.daum.net/image/996A54365F914F3A04EA2C","","내20"],
+["340","P180","","http://cfile283.uf.daum.net/image/999337365F914F3A27F545","",""],
+["340","P181","","http://cfile287.uf.daum.net/image/9983CD3C5F914F3B2BD5CC","조곡폭포.....",""],
+["340","P182","","http://cfile278.uf.daum.net/image/99F6773C5F914F3B29A332","",""],
+["340","P183","","http://cfile271.uf.daum.net/image/999AA23C5F914F3B22777A","",""],
+["340","P184","","http://cfile284.uf.daum.net/image/99F6AE3C5F914F3B292704","",""],
+["340","P185","n","http://cfile282.uf.daum.net/image/9987393C5F914F3C2B1A78","",""],
+["340","P186","","http://cfile282.uf.daum.net/image/99989E3C5F914F3C227A54","1관문 (주흘관) 도착.....",""],
+["340","P187","","http://cfile276.uf.daum.net/image/99BAB43C5F914F3C2A5B70","",""],
+["340","P187a","","http://cfile274.uf.daum.net/image/998948405F92B8C6024924","오늘 지나온 주봉 영봉 부봉 능선을 한자리에.... 마패봉 쪽에서 본 모습(퍼옴)....."],
+["340","P188","","http://cfile251.uf.daum.net/original/99992C435F9150102B3457","",""]
+];  
 </script>
 
 </head>
