--- a/index.html
+++ b/index.html
@@ -103,8 +103,6 @@ function fread(fn){
         return obj;
     }
 //***********************************************		
-
-//***********************************************		
 function itiner(){
 	$(function (){
  		var titin = new Array; var tsum="";
@@ -202,7 +200,6 @@ frames.unshift(' ');
 //*== ● sli();           ----산행기중 슬라이드 부분---- end===============
 //***********************************************		
 //================ 음악 재생 player ==========
-
 	//embed youtube api script
     var tag = document.createElement("script");
     tag.src = "https://www.youtube.com/iframe_api";
@@ -251,8 +248,6 @@ function onYouTubeIframeAPIReady() {
     };
 
 //***********************************************		
-
-//***********************************************		
    //--■■■■■■■■■■■■■■■■■음악 __Xplayer.js■■■■■■■■■■■■■■■■■■
 
 var selm = ""; var titlm = ""; var h = '1'; var w = '1';
@@ -283,9 +278,6 @@ else{
     });
  };
 //***********************************************		
-
-
-//***********************************************		
   //--■■■■■■■■■■■■■■■■■999_alprpt.js■■■■■■■■■■■■■■■■■■
 //*== ●●●●●●●● alprpt();      ----해당(seq)산행기 (음악,일정,사진,슬라이드)영역==
 function alprpt(seq, opn){
@@ -296,41 +288,12 @@ function alprpt(seq, opn){
 });
 };
 //***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-$(function (){
+//$(function (){
     fread("skds");
     fread("trimgs");
     fread("ytbm");
-});	
-
+//});	
 //***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-
-//***********************************************		
-
-
-
-
-	
-
   //--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
   var seq = ""; //--- (산행기)  seq>"000",   "" : 전체목록표	
   var club = ""; //--- (산악회)  "부중산", "산술애",   "" : 전체
@@ -339,7 +302,6 @@ $(function (){
   var num = 0; 	var uval = ""; var clb = "";
 
 //================== seq 값 읽어오기 ================
-
 window.onload = function () {
 	var search = window.location.search;
 	var getData =  _GET(search);
@@ -363,19 +325,10 @@ window.onload = function () {
 		}
 	}
 }
-	
 //================== 산행기 alprpt()함수 구동 ================
  	$(function() {
 		setTimeout(() => alprpt(seq, opn), 1200);
 	});
-
-
-
-
-
-//*== ● alprpt();      ----해당(seq)산행기 display----end===============
-
-
 
  </script>
  </body>
