--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
 
   //*-------------------------------------------------------------------------------
   //========== 배열 영역 (frames) ======================
-    if (club ==""){
+/*    if (club ==""){
 	  var lists = $.map(skds, function(element, index) {
 		 if (element[0] != "") {
 			return [element]
@@ -211,7 +211,7 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
 		  };
 	  });
     };
-
+*/
   	for (i=0; i<lists.length; i++){
    			if ((lists[i][1].substr(5,2)>02) && (lists[i][1].substr(5,2)<06)){ssn=2;}
    			if ((lists[i][1].substr(5,2)>05) && (lists[i][1].substr(5,2)<09)){ssn=3;}
@@ -277,14 +277,6 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
   //*== ● alplist();      ----계절별 산행사진 모음 테이블----end===========
   //--■■■■■■■■■■■■■■■■■999_tlistg.js■■■■■■■■■■■■■■■■■■
   //*== ●●●●●●●● tlistg();      ----(산이름/지역/날짜/월)별 정렬 산행지 리스트----start==========
-
-  function tlistg(){
-  	$(function() {
-
-  var orderBy = "asc";
-  $(function(){
-    init();
-  });
   //========== 배열 영역 (frames) ======================
     if (club!=""){
   var lists = $.map(skds, function(element, index) {
@@ -301,7 +293,16 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
   	 };
   });
     };
+//============================================
+		
+  function tlistg(){
+  	$(function() {
 
+  var orderBy = "asc";
+  $(function(){
+    init();
+  });
+		
   function init(){
     tagParsing(lists, true);
 
