--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 		100%{width:10px;height:10px;opacity: 0.0;transform:translate(490px,60px);}
 	}
 
+  
   </style>
  </head>
  <body>
@@ -87,7 +88,7 @@ function fread(fn){
 
 	$.ajax({
 		url:fileName,
-     headers: {  'Access-Control-Allow-Origin': '../uni2o4o' },
+    headers: {  'Access-Control-Allow-Origin': '../uni2o4o/' },
 		dataType:'text',
 		success: function(da) {
 			var textLine = '<script type="text/javascript">var ' + fn + '=[';
@@ -111,12 +112,12 @@ function fread(fn){
 
   //--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
   var seq = ""; //--- (산행기)  seq>"000",   "" : 전체목록표	
-  var club = ""; //--- (산악회)  "부중산", "산술애",   "" : 전체
-  var opn = ""; //--- (사진공개)   "y": 전체공개, "n": 일부공개tlistg();
+  var club = "산술애"; //--- (산악회)  "부중산", "산술애",   "" : 전체
+  var opn = "y"; //--- (사진공개)   "y": 전체공개, "n": 일부공개tlistg();
   //--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
   var num = 0; 	var uval = ""; var clb = "";
   var ctg = "" ;var c_cd = ""; var c_cd0 = ""; var c_cd1 = ""; var cod = "";
- 
+/* 
 //================== seq 값 읽어오기 ================
     function _GET(search) {
         var obj = {};
@@ -137,8 +138,16 @@ window.onload = function () {
 	uval = getData.val;
 }
 //====== club, seq, opn 지정 =====
+if (uval.length == 0){
+	clb = ""; club = ""; opn = "n";
+	seq = "";
+}else if (uval.length == 1){
 	clb = uval.substr(0,1);
-
+	seq = "";
+}else if (uval.length == 4){
+	clb = uval.substr(0,1);
+	seq = uval.substr(1,3);
+}
 switch (clb) {
   case "a" :
     club = "산술애"; opn = "y";
@@ -150,20 +159,25 @@ switch (clb) {
     club = ""; opn = "y";
     break;
 };
+//====== mmenu / alprpt(seq 지정시) 실행
+if (seq !== ""){
+	$(".mmenu").hide();
+	alprpt(seq);
+}else {
+*/
+		$(function(){
+				setTimeout(() => alplist(), 500);
+				$(".item").show();
 
-$(function(){
-	setTimeout(() => alplist(club), 500);
-	$(".item").show();
-
-	$(function() {
-		$(document).on("click", ".mnt", function(){
-			seq=$(this).attr('title');  //*변수생성하여 클릭한 title을 대입
-			$(".item").hide();
-			alprpt(seq);
-		});
-	});
-});
-
+				$(function() {
+					$(document).on("click", ".mnt", function(){
+						seq=$(this).attr('title');  //*변수생성하여 클릭한 title을 대입
+						$(".item").hide();
+						alprpt(seq);
+					});
+				});
+		)};
+ 			
 function item(){		//-- 산행지list에서 계절별 테이블로 RETURN 할때
 	$(".lit").hide();
 	$(".titleTable").remove();
@@ -189,7 +203,7 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
   var cnn=2;
   var ncl="s2";
 
-  function alplist(club){
+  function alplist(){
   	$(function() {
 	 	var txt = new Array; var tsm="";
 
@@ -198,9 +212,9 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
 
   //*-------------------------------------------------------------------------------
   //========== 배열 영역 (frames) ======================
-    if (club!=""){
+    if (club !=""){
   var lists = $.map(skds, function(element, index) {
-  	  if (element[10] == club) {
+   	  if (element[10] == club) {
   	 	return [element]
   	  };
   });
@@ -213,8 +227,7 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
   	 };
   });
     };
-//============================================
-		
+
   	for (i=0; i<lists.length; i++){
    			if ((lists[i][1].substr(5,2)>02) && (lists[i][1].substr(5,2)<06)){ssn=2;}
    			if ((lists[i][1].substr(5,2)>05) && (lists[i][1].substr(5,2)<09)){ssn=3;}
@@ -280,10 +293,14 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
   //*== ● alplist();      ----계절별 산행사진 모음 테이블----end===========
   //--■■■■■■■■■■■■■■■■■999_tlistg.js■■■■■■■■■■■■■■■■■■
   //*== ●●●●●●●● tlistg();      ----(산이름/지역/날짜/월)별 정렬 산행지 리스트----start==========
-		
+
   function tlistg(){
   	$(function() {
-		
+
+  var orderBy = "asc";
+  $(function(){
+    init();
+  });
   //========== 배열 영역 (frames) ======================
     if (club!=""){
   var lists = $.map(skds, function(element, index) {
@@ -300,13 +317,7 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
   	 };
   });
     };
-//============================================
-		
-  var orderBy = "asc";
-  $(function(){
-    init();
-  });
-		
+
   function init(){
     tagParsing(lists, true);
 
@@ -518,7 +529,6 @@ else{
     });
  };
 
-
 //================ 음악 재생 player ==========
 
 		// 영상의 정보를 담을 player 전역 변수 선언
@@ -571,7 +581,6 @@ else{
     };
     // 볼륨 조절
     function soundControl(number) { player.setVolume(number); };
-
 
  </script>
  </body>
