--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function fread(fn){
 
 	$.ajax({
 		url:fileName,
-    headers: {  'Access-Control-Allow-Origin': '../uni2o4o' },
+    headers: {  'Access-Control-Allow-Origin': '../uni2o4o/' },
 		dataType:'text',
 		success: function(da) {
 			var textLine = '<script type="text/javascript">var ' + fn + '=[';
@@ -176,7 +176,7 @@ if (seq !== ""){
 						alprpt(seq);
 					});
 				});
-		)};
+		});
  			
 function item(){		//-- 산행지list에서 계절별 테이블로 RETURN 할때
 	$(".lit").hide();
