--- a/index.html
+++ b/index.html
@@ -137,10 +137,8 @@ window.onload = function () {
 	var getData =  _GET(search);
 	uval = getData.val;
 }
-//====== club, seq, opn 지정 =====
-if (uval.length == 4){
+//====== club, opn 지정 =====
 	clb = uval.substr(0,1);
-}
 		
 switch (clb) {
   case "a" :
