--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ function fread(fn){
 		
   //--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
   var seq = ""; //--- (산행기)  seq>"000",   "" : 전체목록표	
-  //var club = ""; //--- (산악회)  "부중산", "산술애",   "all" : 전체
-  //var opn = ""; //--- (사진공개)   "y": 전체공개, "n": 일부공개tlistg();
+  var club = ""; //--- (산악회)  "부중산", "산술애",   "all" : 전체
+  var opn = ""; //--- (사진공개)   "y": 전체공개, "n": 일부공개tlistg();
   //--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
   var num = 0; 	var uval = ""; var clb = "";
   var ctg = "" ;var c_cd = ""; var c_cd0 = ""; var c_cd1 = ""; var cod = "";
@@ -140,9 +140,9 @@ window.onload = function () {
 //====== club, opn 지정 =====
 	clb = uval.substr(0,1);
 		
-if (clb == "a") {var club = "산술애"; var opn = "y";};
-if (clb == "b") {var club = "부중산"; var opn = "y";};
-if (clb == "c") {var club = "all"; var opn = "y";};
+if (clb == "a") {club = "산술애"; opn = "y";};
+if (clb == "b") {club = "부중산"; opn = "y";};
+if (clb == "c") {club = "all"; opn = "y";};
 			
 $(function(){
 	setTimeout(() => alplist(), 500);
